[package]
name = "phase_space_sdk"
version = "0.1.0"
edition = "2021"

[features]
default = []
engine_internal = []

[dependencies]
phase_space_core = { git = "ssh://git@github.com/nilsnark/phase-space-engine", package = "phase_space_core", features = ["engine_internal"] }
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
bytemuck = { version = "1.14", features = ["derive"] }
